// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawing Layer Components Ellipse adds a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <ellipse
        cx="10"
        cy="10"
        fill="#cccccc"
        pointer-events="visible"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Ellipse deletes a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Ellipse moves a ellipse 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <ellipse
        cx="5"
        cy="5"
        fill="#cccccc"
        pointer-events="visible"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line adds a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <path
        d="M 10 10 l 1 1 l 2 2"
        data-object-id="123"
        fill="none"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Freehand Line deletes a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Freehand Line moves a freehand line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <path
        d="M 5 5 l 1 1 l 2 2"
        data-object-id="123"
        fill="none"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Group creates a group 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <rect
      class="group"
      fill="none"
      height="20"
      pointer-events="visible"
      stroke="none"
      width="20"
      x="0"
      y="0"
    />
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <rect
        class="rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="none"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="10"
        y="10"
      />
    </g>
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <ellipse
        cx="10"
        cy="10"
        fill="#cccccc"
        pointer-events="none"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
    <g>
      <rect
        data-testid="selection-box"
        fill="#777"
        fill-opacity="0"
        height="40"
        pointer-events="none"
        stroke="#777"
        stroke-dasharray="10 5"
        stroke-width="1.5"
        width="40"
        x="-10"
        y="-10"
      />
      <g>
        <rect
          class="resize-handle nw"
          data-corner="nw"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="-15"
          y="-15"
        />
        <rect
          class="resize-handle ne"
          data-corner="ne"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="25"
          y="-15"
        />
        <rect
          class="resize-handle sw"
          data-corner="sw"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="-15"
          y="25"
        />
        <rect
          class="resize-handle se"
          data-corner="se"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="25"
          y="25"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Group deletes a group 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Group moves a group 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <rect
      class="group"
      fill="none"
      height="20"
      pointer-events="visible"
      stroke="none"
      width="20"
      x="0"
      y="0"
    />
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <rect
        class="rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="none"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="10"
        y="10"
      />
    </g>
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <ellipse
        cx="10"
        cy="10"
        fill="#cccccc"
        pointer-events="none"
        rx="10"
        ry="10"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      />
    </g>
    <g>
      <rect
        data-testid="selection-box"
        fill="#777"
        fill-opacity="0"
        height="40"
        pointer-events="none"
        stroke="#777"
        stroke-dasharray="10 5"
        stroke-width="1.5"
        width="40"
        x="-10"
        y="-10"
      />
      <g>
        <rect
          class="resize-handle nw"
          data-corner="nw"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="-15"
          y="-15"
        />
        <rect
          class="resize-handle ne"
          data-corner="ne"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="25"
          y="-15"
        />
        <rect
          class="resize-handle sw"
          data-corner="sw"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="-15"
          y="25"
        />
        <rect
          class="resize-handle se"
          data-corner="se"
          fill="#FFF"
          fill-opacity="1"
          height="10"
          stroke="#777"
          stroke-width="1"
          width="10"
          x="25"
          y="25"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Image adds an image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <image
        height="10"
        href="test-file-stub"
        pointer-events="visible"
        preserveAspectRatio="none"
        width="10"
        x="10"
        y="10"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Image deletes a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Image moves a image 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <image
        height="10"
        href="assets/logo_tw.png"
        pointer-events="visible"
        preserveAspectRatio="none"
        width="10"
        x="5"
        y="5"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle adds a Rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <rect
        class="rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="10"
        y="10"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Rectangle deletes a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Rectangle moves a rectangle 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <rect
        class="rectangle"
        fill="#cccccc"
        height="10"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
        width="10"
        x="5"
        y="5"
      />
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow adds a Vector arrow 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#777777"
        pointer-events="visible"
        stroke="#777777"
        stroke-dasharray=""
        stroke-width="2"
      >
        <line
          x1="20"
          x2="40"
          y1="20"
          y2="40"
        />
        <g
          transform="translate(40 40) rotate(135)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
        <g
          transform="translate(20 20) rotate(315)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow changes vector to double arrow 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#777777"
        pointer-events="visible"
        stroke="#777777"
        stroke-dasharray=""
        stroke-width="2"
      >
        <line
          x1="20"
          x2="40"
          y1="20"
          y2="40"
        />
        <g
          transform="translate(40 40) rotate(135)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
        <g
          transform="translate(20 20) rotate(315)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow changes vector to single arrow 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#777777"
        pointer-events="visible"
        stroke="#777777"
        stroke-dasharray=""
        stroke-width="2"
      >
        <line
          x1="20"
          x2="40"
          y1="20"
          y2="40"
        />
        <g
          transform="translate(40 40) rotate(135)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector arrow deletes a vector arrow 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Vector arrow moves a vector arrow 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#777777"
        pointer-events="visible"
        stroke="#777777"
        stroke-dasharray=""
        stroke-width="2"
      >
        <line
          x1="5"
          x2="25"
          y1="5"
          y2="25"
        />
        <g
          transform="translate(25 25) rotate(135)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
        <g
          transform="translate(5 5) rotate(315)"
        >
          <polygon
            points="0 0 4.5 9 -4.5 9 0 0"
          />
        </g>
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line adds a Vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#888888"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      >
        <line
          x1="10"
          x2="20"
          y1="10"
          y2="20"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Components Vector line deletes a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  />
</svg>
`;

exports[`Drawing Layer Components Vector line moves a vector line 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(1)"
  >
    <g
      transform="translate(0,0) scale(1,1)"
    >
      <g
        class="vector"
        fill="#888888"
        pointer-events="visible"
        stroke="#888888"
        stroke-dasharray=""
        stroke-width="1"
      >
        <line
          x1="5"
          x2="15"
          y1="5"
          y2="15"
        />
      </g>
    </g>
  </g>
</svg>
`;

exports[`Drawing Layer Zoom zooms in 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(2)"
  >
    <rect
      class="rectangle"
      fill="#cccccc"
      height="10"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
      width="10"
      x="10"
      y="10"
    />
  </g>
</svg>
`;

exports[`Drawing Layer Zoom zooms out 1`] = `
<svg
  xmlns:xlink="http://www.w3.org/1999/xlink"
>
  <g
    class="object-canvas"
    data-testid="drawing-layer-object-canvas"
    transform="translate(0, 0) scale(0.5)"
  >
    <rect
      class="rectangle"
      fill="#cccccc"
      height="10"
      pointer-events="visible"
      stroke="#888888"
      stroke-dasharray=""
      stroke-width="1"
      width="10"
      x="10"
      y="10"
    />
  </g>
</svg>
`;
